Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -54,13 +54,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   |   |   \n",
+      "----------\n",
+      "   |   |   \n",
+      "----------\n",
+      "   |   |   \n"
+     ]
+    }
+   ],
    "source": [
-    "travel_month = None"
+    "class Board():\n",
+    "    def __init__ (self):\n",
+    "        self.cells = [\" \", \" \", \" \", \" \", \" \", \" \", \" \", \" \", \" \", \" \"]\n",
+    "    def display (self):\n",
+    "        print(\" %s | %s | %s \" %(self.cells[1], self.cells[2], self.cells[3]))\n",
+    "        print(\"----------\")\n",
+    "        print(\" %s | %s | %s \" %(self.cells[4], self.cells[5], self.cells[6]))\n",
+    "        print(\"----------\")\n",
+    "        print(\" %s | %s | %s \" %(self.cells[7], self.cells[8], self.cells[9]))\n",
+    "board = Board()\n",
+    "board.display()"
    ]
   },
   {
@@ -72,13 +92,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "travel_month # \"January\""
+    "travel_month = \"January\" # \"January\""
    ]
   },
   {
@@ -90,10 +108,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
     "number_of_weeks = None"
@@ -101,13 +117,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "number_of_weeks # 3"
+    "number_of_weeks = 3 # 3"
    ]
   },
   {
@@ -119,13 +133,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "number_of_weeks # 5"
+    "number_of_weeks = 5 # 5"
    ]
   },
   {
@@ -152,21 +164,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
